# plantmonitor

./: .env.example  .env.testing_public  .gitignore  CHANGES.md  README.md  addPlant.py  check_db_connection.py  deploy.py  docker-compose.postgres-test.yml  importPlant.py  main.py  main_orm.py  plantmonitor.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  scriptlauncher.yaml  setup.cfg  setup.py  test_addPlant.py  test_check_db_connection.py  test_importPlant.py
ORM/: db_utils.py  migrations.py  models.py  orm_util.py  orm_utils.py  pony_manager.py  schema.sql  test_db_utils.py  test_migrations.py  test_models.py  test_orm_util.py  test_pony_manager.py  test_solar_models.py
api_server/: plantmonitor_api.py  test_plantmonitor_api.py
b2bdata/: expectedEnergy-2020-09-Florida.csv  expectedPower-2020-01-Alcolea.csv  expectedPower-2020-06-Alcolea.csv  expectedPower-2020-09-Alcolea.csv  expectedPower-2020-09-Florida.csv  expectedPower-2021-04-Alcolea.csv  irradiance-2021-07-21-Alcolea-one-registry.csv  irradiance-2021-07-21-Alcolea.csv  irradiance-2021-07-21-Alcolea_test_cases.csv  irradiance-2021-07-21-Florida.csv  plantmonitor.expectedpower_test.ExpectedPower_Test.test_expectedEnergy_Florida_2020_09-expected  plantmonitor.expectedpower_test.ExpectedPower_Test.test_expectedPower_Florida_2020_09-expected  plantmonitor.test_expectedpower.ExpectedPower_Test.test_expectedPower_Alcolea_2021_04_noCorrections-expected  plantmonitor.test_expectedpower.ExpectedPower_Test.test_expectedPower_Florida_2020_09-expected  plantmonitor.test_expectedpower.ExpectedPower_Test.test_expectedPower_Florida_2020_09_withCorrection-expected  plantmonitor.test_expectedpower.ExpectedPower_Test.test_integrateExpectedPower_Florida_2020_09-expected  test_queries.Queries_Test.test__irradiance__write_read_one_registry-expected  test_queries.Queries_Test.test_irradiation-expected  (+4 more)
(+1299 files in other folders)
