[tool.poetry]
name = "plantmonitor"
version = "1.1"
description = "Distributed energy plant monitoring application"
authors = ["Som Energia SCCL <info@somenergia.coop>"]
license = "AGPL-3.0-or-later" # https://spdx.org/licenses/AGPL-3.0-or-later.html
readme = "README.md"
repository = 'https://github.com/Som-Energia/plantmonitor'
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Intended Audience :: Developers',
    'Development Status :: 2 - Pre-Alpha',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Operating System :: OS Independent',
]
packages = [{ include = "plantmonitor" }]

[tool.poetry.dependencies]
pymodbus = "^1.3.2"
python_dateutil = "^2.6.1"
yamlns = "^0.11.0"
APScheduler = "^3.6.0"
pony = "^0.7.13"
# somutils = "^1.7.1" not really used in the project and constraints python version to <3.
python = "^3.8"
erppeek = "*"
rednose = "*"
nose = "*"
scipy = "*"
fastapi = "*"
psycopg2 = "*"
decorator = "*"
environs = "*"
zeep = "*"
b2btest = "*"
uvicorn = "*"


[tool.poetry.group.dev.dependencies]
black = "<24.10"
ruff = "^0.6.9"
pytest = "^8.3.3"
pre-commit = "<4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/foo.py    # exclude a file named foo.py in the root of the project
  | .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
)
'''
